// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alerts should render correctly with a server side exception 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "display": "grid",
      "gridAutoRows": "auto",
      "gridRowGap": "5px",
      "gridTemplateColumns": "auto",
      "overflowY": "auto",
      "paddingTop": "5px",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 10000,
    }
  }
>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="0"
    onMouseEnter={[Function]}
    title="Info"
    variant="info"
  >
    <span>
      Message 1
    </span>
  </Alert>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="1"
    onMouseEnter={[Function]}
    title="Success"
    variant="success"
  >
    <span>
      Message 2
    </span>
  </Alert>
  <Modal
    actions={
      <Button
        onClick={[Function]}
      >
        Close
      </Button>
    }
    ariaDescribedById=""
    className=""
    hideTitle={false}
    isLarge={false}
    isOpen={true}
    isSmall={false}
    onClose={[Function]}
    title="Server Side Error"
  >
    <Title
      size="md"
    >
      Exception1: Server Error 1
    </Title>
    <Text
      key="Line 1.1"
    >
      Line 1.1
    </Text>
    <Text
      key="Line 1.2"
    >
      Line 1.2
    </Text>
    <Text
      key="Line 1.3"
    >
      Line 1.3
    </Text>
    <Text>
      Caused By
    </Text>
    <Title
      size="md"
    >
      Exception2: Server Error 2
    </Title>
    <Text
      key="Line 2.1"
    >
      Line 2.1
    </Text>
    <Text
      key="Line 2.2"
    >
      Line 2.2
    </Text>
    <Text
      key="Line 2.3"
    >
      Line 2.3
    </Text>
  </Modal>
</div>
`;

exports[`Alerts should render correctly with alerts 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "display": "grid",
      "gridAutoRows": "auto",
      "gridRowGap": "5px",
      "gridTemplateColumns": "auto",
      "overflowY": "auto",
      "paddingTop": "5px",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 10000,
    }
  }
>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="0"
    onMouseEnter={[Function]}
    title="Info"
    variant="info"
  >
    <span>
      Message 1
    </span>
  </Alert>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="1"
    onMouseEnter={[Function]}
    title="Success"
    variant="success"
  >
    <span>
      Message 2
    </span>
  </Alert>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="2"
    onMouseEnter={[Function]}
    title="Error"
    variant="danger"
  >
    <span>
      Message 3
    </span>
  </Alert>
  <Modal
    actions={
      <Button
        onClick={[Function]}
      >
        Close
      </Button>
    }
    ariaDescribedById=""
    className=""
    hideTitle={false}
    isLarge={false}
    isOpen={false}
    isSmall={false}
    onClose={[Function]}
    title="Server Side Error"
  />
</div>
`;

exports[`Alerts should render correctly without alerts 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "display": "grid",
      "gridAutoRows": "auto",
      "gridRowGap": "5px",
      "gridTemplateColumns": "auto",
      "overflowY": "auto",
      "paddingTop": "5px",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 10000,
    }
  }
>
  <Modal
    actions={
      <Button
        onClick={[Function]}
      >
        Close
      </Button>
    }
    ariaDescribedById=""
    className=""
    hideTitle={false}
    isLarge={false}
    isOpen={false}
    isSmall={false}
    onClose={[Function]}
    title="Server Side Error"
  />
</div>
`;
